--- a/build.settings
+++ b/build.settings
@@ -5,7 +5,7 @@ settings = {
 	
 	orientation = {
 		default = "landscapeLeft",
-		supported = { "portrait", }
+		supported = { "landscapeLeft","landscapeRight" }
 	},
 	
 	iphone = {
