--- a/build.settings
+++ b/build.settings
@@ -4,8 +4,8 @@
 settings = {
 	
 	orientation = {
-		default = "landscapeLeft",
-		supported = { "landscapeLeft","landscapeRight" }
+		default = "landscapeRight",
+		supported = { "landscapeRight", }
 	},
 	
 	iphone = {
